--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
 
 
   <div id="personanexus" class="collapse" style="margin-left:0%;">
-  <a href="#">Link to Personanexus site.</a>
+  <a href="http://104.138.184.164:8008/test/analytics/personanexus.html">Link to Personanexus site.</a>
   <p>The ultimate goal of Personanexus is to create parallels between all the different ways to categorize people and personalities. Check out the adjacent pic courtesy of Cracked. The ninja turtle Leonardo is the leader of his group. He's even-tempered and ambitious. This "leader-of-4" trope is seen everywhere from Scooby Doo to Seinfeld to real-life groups like The Beatles to the 4 temperaments of Hippocrates. Personanexus takes this a step further by enabling comparisons to be drawn between different "persona groups" with dissimilar numbers of "personas." It's fun to put people into boxes. From astrology to personality psychology to 'which Sex &amp; the City character are you?' type quizzes, a certain segment of the population has always been drawn this.</p>
  </div>
 
