--- a/projects.html
+++ b/projects.html
@@ -40,11 +40,28 @@
   Placeholder
   </div>
 
+<hr />
+
+  <p>Current Project</p>
+  <div style="display:inline-flex;">
+  <div style="margin:auto;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#thehatelist" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> The Hate List</button></div>
+            <div id="tag_box">
+            <ul>
+              <li>PHP</li>
+              <li>Mongo</li>
+              <li>MySQL</li>
+            </ul>
+            </div>
+   </div>
+
+  <div id="thehatelist" class="collapse" style="margin-left:0%;">
+  <a href="#">Link to The Hate List site.</a>
+  <p>Vote for the most hated person in the world. Inspired by the novel Adjustment Day.</p>
+ </div>
 
 <hr />
 
-
-  <p>Current Project</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#personanexus" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> Personanexus</button></div>
@@ -57,12 +74,29 @@
             </div>
    </div>
 
-
   <div id="personanexus" class="collapse" style="margin-left:0%;">
   <a href="http://104.138.184.164:8008/test/analytics/personanexus.html">Link to Personanexus site.</a>
   <p>The ultimate goal of Personanexus is to create parallels between all the different ways to categorize people and personalities. Check out the adjacent pic courtesy of Cracked. The ninja turtle Leonardo is the leader of his group. He's even-tempered and ambitious. This "leader-of-4" trope is seen everywhere from Scooby Doo to Seinfeld to real-life groups like The Beatles to the 4 temperaments of Hippocrates. Personanexus takes this a step further by enabling comparisons to be drawn between different "persona groups" with dissimilar numbers of "personas." It's fun to put people into boxes. From astrology to personality psychology to 'which Sex &amp; the City character are you?' type quizzes, a certain segment of the population has always been drawn this.</p>
  </div>
 
+<hr />
+  
+  <div style="display:inline-flex;">
+  <div style="margin:auto;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#memewar" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> Meme War</button></div>
+            <div id="tag_box">
+            <ul>
+              <li>Neo4j</li>
+              <li>Phaser</li>
+              <li>Nodejs</li>
+            </ul>
+            </div>
+   </div>
+
+  <div id="memewar" class="collapse" style="margin-left:0%;">
+  <a href="http://memewar.io">Link to Meme War site.</a>
+  <p>Meme War</p>
+ </div>
 
 <hr />
 
