--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
    <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this site</button></div>
           <div id="tag_box">
-          This site will have posts documenting my data science training as well as various ideas I try to pursue. Click the button to the left for more detail.
+          This site will have posts documenting my various projects as well as various ideas I try to pursue. Click the button to the left for more detail.
             </div>
   </div>
 
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-  Placeholder
+  The blog will have more of my data science work.
   </div>
 
 
@@ -97,7 +97,7 @@
   });
   </code></pre>
   Now your server is running, but when you point your browser to 127.0.0.1:8081 there's nothing there! That's because we still need to send an html file which we'll make next.
-</p>
+  </p>
 
   <h3>HTML file</h3>
   <p>
@@ -167,26 +167,23 @@
   </div>
 
   
-
 <hr />
 
   <p>Current Project</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#personanexus" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> Personanexus</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#earthb" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Earth B</button></div>
             <div id="tag_box">
             <ul>
-              <li>PHP</li>
-              <li>Mongo</li>
-              <li>MySQL</li>
+              <li>Android</li>
+              <li>Unity</li>
+              <li>C#</li>
             </ul>
             </div>
    </div>
 
-
-  <div id="personanexus" class="collapse" style="margin-left:0%;">
-  <a href="http://104.138.184.164:8008/test/analytics/personanexus.html">Link to Personanexus site.</a>
-  <p>The ultimate goal of Personanexus is to create parallels between all the different ways to categorize people and personalities. Check out the adjacent pic courtesy of Cracked. The ninja turtle Leonardo is the leader of his group. He's even-tempered and ambitious. This "leader-of-4" trope is seen everywhere from Scooby Doo to Seinfeld to real-life groups like The Beatles to the 4 temperaments of Hippocrates. Personanexus takes this a step further by enabling comparisons to be drawn between different "persona groups" with dissimilar numbers of "personas." It's fun to put people into boxes. From astrology to personality psychology to 'which Sex &amp; the City character are you?' type quizzes, a certain segment of the population has always been drawn this.</p>
+  <div id="earthb" class="collapse" style="margin-left:0%;">
+  <p>A game for Android devices.</p>
  </div>
 
 
