--- a/projects.html
+++ b/projects.html
@@ -37,20 +37,38 @@
 
 
   <div id="intro" class="collapse" style="margin-left:0%;">
-  Placeholder
+  The current project is just the thing I'm working on the most right now. I usually am working on several things simultaneously. The bulleted list are the some of technologies I used to create the project and if you click the button you can see the project for yourself.
   </div>
+
+<hr/>
+
+  <p>Current Project</p>
+  <div style="display:inline-flex;">
+  <div style="margin:auto;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#earthb" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Earth B</button></div>
+            <div id="tag_box">
+            <ul>
+              <li>Android</li>
+              <li>Unity</li>
+              <li>C#</li>
+            </ul>
+            </div>
+   </div>
+
+  <div id="earthb" class="collapse" style="margin-left:0%;">
+  <p>A game for Android devices.</p>
+ </div>
 
 <hr />
 
-  <p>Current Project</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#thehatelist" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> The Hate List</button></div>
             <div id="tag_box">
             <ul>
-              <li>PHP</li>
+              <li>Mustache</li>
               <li>Mongo</li>
-              <li>MySQL</li>
+              <li>Cookies</li>
             </ul>
             </div>
    </div>
@@ -64,7 +82,7 @@
   
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#memewar" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" class="button_pic"/> Meme War</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#memewar" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/mv.png" border="0" alt="" class="button_pic"/> Meme War</button></div>
             <div id="tag_box">
             <ul>
               <li>Neo4j</li>
@@ -86,7 +104,7 @@
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#csa" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> CSA</button></div>
             <div id="tag_box">
             <ul>
-              <li>Novel</li>
+              <li>Text</li>
             </ul>
             </div>
    </div>
