--- a/projects/csa.html
+++ b/projects/csa.html
@@ -62,7 +62,7 @@
   <p>Chapter 1</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#allagame" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> It's All a Game to Me</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#allagame" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/1.png" border="0" alt="" class="button_pic"/> It's All a Game to Me</button></div>
             <div id="tag_box">
             A NEET goes on a night mission in modern day.
             </div>
@@ -227,7 +227,7 @@
   <p>Chapter 2</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#revsmowee" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Revolutionaries Smoke Weed</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#revsmowee" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/2.png" border="0" alt="" class="button_pic"/> Revolutionaries Smoke Weed</button></div>
             <div id="tag_box">
             A young man graduates college on the day martial law is declared.
             </div>
@@ -278,9 +278,9 @@
   <p>Chapter 3</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#socfem" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Sociopathy is a Feminine Trait</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#socfem" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/3.png" border="0" alt="" class="button_pic"/> Sociopathy is a Feminine Trait</button></div>
             <div id="tag_box">
-            A woman starts a revolution.
+            A graduate student starts a nationwide revolution.
             </div>
   </div>
 
@@ -347,7 +347,7 @@
   <p>Chapter 4</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#history" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> A People's History of Dissolution</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#history" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/4.png" border="0" alt="" class="button_pic"/> A People's History of Dissolution</button></div>
             <div id="tag_box">
             A historical documentation of the events leading up to, during, and immediately after the Dissolution of the United States of America.
             </div>
@@ -421,9 +421,9 @@
   <p>Chapter 6</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#oracle" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Offline Revolutionary Administration Communication Legislation Executor</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#oracle" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/6.png" border="0" alt="" class="button_pic"/> Offline Revolutionary Administration Communication Legislation Executor</button></div>
             <div id="tag_box">
-            Life on a bootstrap community after Dissolution using the ORACLE system.
+            Two friends use the ORACLE system to start a bootstrap community after Dissolution.
             </div>
   </div>
 
@@ -616,9 +616,9 @@
   <p>Chapter 7</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#alwayslow" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Always Low Prices, Always</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#alwayslow" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/7.png" border="0" alt="" class="button_pic"/> Always Low Prices, Always</button></div>
             <div id="tag_box">
-            A young man becomes an indentured servant for the Distributed State of Walmart.
+            A graffiti-advertiser becomes an indentured servant for the Distributed State of Walmart.
             </div>
   </div>
 
@@ -866,7 +866,7 @@
   <p>Chapter 8</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#mcbildungs" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> McBildungsroman</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#mcbildungs" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/8.png" border="0" alt="" class="button_pic"/> McBildungsroman</button></div>
             <div id="tag_box">
             A teenager joins the McDonalds microstate outreach program.
             </div>
@@ -1306,7 +1306,7 @@
   <p>Chapter 9</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#inalllies" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> In All Lies Are Truth</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#inalllies" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/9.png" border="0" alt="" class="button_pic"/> In All Lies Are Truth</button></div>
             <div id="tag_box">
             [UNDER CONSTRUCTION] A Monsanto scientist gets kidnapped by an anti-GMO organization.
             </div>
@@ -1321,9 +1321,9 @@
   <p>Chapter 10</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#oneanother" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Like One Another</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#oneanother" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/10.png" border="0" alt="" class="button_pic"/> Like One Another</button></div>
             <div id="tag_box">
-            A man goes on a series of missions to prevent someone from stealing internet.
+            A contract enforcer goes on a series of missions to prevent someone from stealing internet.
             </div>
   </div>
 
@@ -1684,7 +1684,7 @@
   <p>Chapter 11</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#immortality" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Hyper-Immortality</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#immortality" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/11.png" border="0" alt="" class="button_pic"/> Hyper-Immortality</button></div>
             <div id="tag_box">
               One of the hyper-rich uses money to become hyper-immortal.
             </div>
@@ -2162,7 +2162,7 @@
   <p>Chapter 12</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#danilseong" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="#" border="0" alt="" class="button_pic"/> Dan-ilseong</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#danilseong" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/12.png" border="0" alt="" class="button_pic"/> Dan-ilseong</button></div>
             <div id="tag_box">
             [UNDER CONSTRUCTION]  A representative from Dan-ilseong tries to buy land from a notorious Lord.
             </div>
