--- a/projects/csa.html
+++ b/projects/csa.html
@@ -62,7 +62,7 @@
   <p>Chapter 1</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#allagame" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/1.png" border="0" alt="" class="button_pic"/> It's All a Game to Me</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#allagame" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/1.png" border="0" alt="" class="button_pic"/> It's All a Game to Me</button></div>
             <div id="tag_box">
             A NEET goes on a night mission in modern day.
             </div>
@@ -227,7 +227,7 @@
   <p>Chapter 2</p>
   <div style="display:inline-flex;">
   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#revsmowee" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="res/csaicons/2.png" border="0" alt="" class="button_pic"/> Revolutionaries Smoke Weed</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#revsmowee" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/2.png" border="0" alt="" class="button_pic"/> Revolutionaries Smoke Weed</button></div>
             <div id="tag_box">
             A young man graduates college on the day martial law is declared.
             </div>
