--- a/projects/csa.html
+++ b/projects/csa.html
@@ -600,7 +600,7 @@
 
   <p>Chapter 6</p>
   <div style="display:inline-flex;">
-  <div style="margin:auto;">
+  <div >
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#theantlion" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="../res/csaicons/6.png" border="0" alt="" class="button_pic"/> The Ant Lion</button></div>
             <div id="tag_box">
             A man creates the largest raider gang of all time to protect his daughter.
